<resources>
    <string name="app_name">LocationTrackerAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_job_service_demo">Job Service Fused Location Provider Client
    </string>
    <string name="foreground_service_for_location_is_running">Foreground service for location is running</string>
    <string name="start_background_demo_activity">Start Background Demo Activity</string>
    <string name="location_will_be_updated_here">Location will be updated here</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
